--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,6 +7,6 @@
   --bg-third-color: #c2e297;
   --main-text-color: #000000;
   --second-text-color: #907e82;
-  --accent-font: "Titan One", cursive;
+  --title-font: "Titan One", cursive;
   --main-font: "DM Sans", sans-serif;
 }
